--- a/css/style.css
+++ b/css/style.css
@@ -525,7 +525,7 @@ body.light .skills__contain .box i {
   background-color: var(--secondary);
   position: relative;
   height: 300px;
-  z-index: 100;
+  z-index: 10;
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -558,7 +558,7 @@ body.light .about__contain .img__box::after {
   position: absolute;
   top: 1em;
   width: 100%;
-  z-index: 20;
+  z-index: 10;
 }
 .about__contain .about__content .about__title {
   font-size: 2.7em;
@@ -610,3 +610,70 @@ body.light .about__contain .about__content .about__desc {
   }
 }
 /* ****** about code ends ****** */
+
+/* ****** qualification code starts ****** */
+.qualification__contain {
+  margin: 4em auto;
+  width: min(990px, 80%);
+  position: relative;
+}
+.qualification__contain .line {
+  position: absolute;
+  width: 0.2em;
+  height: 100%;
+  border-radius: 0.5em;
+  background-color: var(--theme-color);
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.qualification__contain .qualification__card {
+  position: relative;
+  padding: 1em 3em;
+  width: 50%;
+}
+.box_right {
+  left: 0;
+  padding-right: 2em;
+}
+.box_left {
+  left: 50%;
+}
+.qualification__content {
+  position: relative;
+  padding: 2em 2.5em;
+  background-color: transparent;
+  border: 1.5px solid var(--theme-color);
+  border-radius: 1em;
+  box-shadow: 0 0.5em 1em var(--theme-color);
+}
+.qualification__content::after {
+  content: "";
+  position: absolute;
+  top: 10px;
+  width: 0;
+  height: 0;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-left: 10px solid var(--theme-color);
+  right: -10px;
+}
+.box_left .qualification__content::after {
+  border-left: 0;
+  border-right: 10px solid var(--theme-color);
+  left: -10px;
+}
+.dot {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  top: 25px;
+  right: -5px;
+  border-radius: 50%;
+  background-color: var(--theme-color);
+  border: 2px solid var(--primary);
+}
+.box_left .dot {
+  left: -5px;
+}
+/* ****** qualification code ends ****** */
